fixed issue with overlapping headers in maintables

--- a/src/touchpoint-ui/Components/Display/DisplaySupport/MainTableRow.css
+++ b/src/touchpoint-ui/Components/Display/DisplaySupport/MainTableRow.css
@@ -122,6 +122,7 @@
 .MainTableRow .componentWrapper .theadBar{
 	top:0;
 	height: 20px;
+	z-index: 0;
 }
 
 .MainTableRow .componentWrapper .mainSection{
